@@ -1,5 +1,5 @@
 %------------------------------------------
-%       $Id: GMT_Appendix_B.tex,v 1.31 2008-04-06 01:30:32 remko Exp $
+%       $Id: GMT_Appendix_B.tex,v 1.32 2008-11-28 23:29:11 guru Exp $
 %
 %       The GMT Documentation Project
 %       Copyright 2000-2008.
@@ -178,6 +178,7 @@ for more information.
 
 \subsection{Gridline and Pixel node registration} 
 \index{grid file!registration|(}
+\label{sec:node_registration}
 
 Scanline format means that the data are stored in rows (\emph{y} = constant)
 going from the ``top'' ($y = y_{max}$ (north)) to the ``bottom''
